--- a/minecraft/base/deployment.yaml
+++ b/minecraft/base/deployment.yaml
@@ -31,4 +31,4 @@ spec:
       volumes:
         - name: data
           persistentVolumeClaim:
-            claimName: minecraft-pvc
+            claimName: minecraft-bedrock-1
