--- a/minecraft/base/deployment.yaml
+++ b/minecraft/base/deployment.yaml
@@ -18,20 +18,36 @@ spec:
         - name: minecraft-bedrock
           image: docker.io/itzg/minecraft-bedrock-server
           imagePullPolicy: Always
-          resources:
-            requests:
-              cpu: 500m
-              memory: 1Gi
           env:
             - name: EULA
               value: "TRUE"
           envFrom:
             - configMapRef:
                 name: minecraft-bedrock-1-config
+          resources:
+            requests:
+              cpu: 500m
+              memory: 1Gi
+          readinessProbe: &probe
+            exec:
+              command:
+                - mc-monitor
+                - status-bedrock
+                - --host
+                # force health check against IPv4 port
+                - 127.0.0.1
+            initialDelaySeconds: 30
+          livenessProbe: *probe
+          tty: true
+          stdin: true
           volumeMounts:
             - name: data
               mountPath: /data
+            - name: allowlist
       volumes:
         - name: data
           persistentVolumeClaim:
             claimName: minecraft-bedrock-1
+        - name: allowlist
+          configMap:
+            name: minecraft-allowlist-config
