--- a/minecraft/base/deployment.yaml
+++ b/minecraft/base/deployment.yaml
@@ -44,6 +44,7 @@ spec:
             - name: data
               mountPath: /data
             - name: allowlist
+              mountPath: /data
       volumes:
         - name: data
           persistentVolumeClaim:
