--- a/apps/Chart.yaml
+++ b/apps/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: minecraft-app-of-apps
-description: Minecraft Bedrock Server
+description: Minecraft Servers
 type: application
 version: 0.1.0
 appVersion: "1.0"
