--- a/apps/templates/minecraft.yaml
+++ b/apps/templates/minecraft.yaml
@@ -18,6 +18,6 @@ spec:
     automated:
       prune: true
       allowEmpty: true
-      selfHeal: true
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
