--- a/apps/templates/bedrock-test.yaml
+++ b/apps/templates/bedrock-test.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: app-minecraft-bedrock-test
+  name: minecraft-bedrock-test
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
