--- a/minecraft/base/config.yaml
+++ b/minecraft/base/config.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: minecraft-bedrock-1-config
+  name: minecraft-bedrock-config
   labels:
-    app.kubernetes.io/name: minecraft-bedrock-1
+    app.kubernetes.io/name: minecraft-bedrock
 data:
   EULA: 'true'
   TZ: 'Europe/London'
@@ -26,7 +26,7 @@ data:
   allowlist.json: |-
     [
       {
-        "name": "Dada",
+        "name": "Deddy",
         "uuid": "2533274949710273"
       }
     ]
