--- a/minecraft/base/service.yaml
+++ b/minecraft/base/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: minecraft-bedrock-1
+  name: minecraft-bedrock
   labels:
-    app.kubernetes.io/name: minecraft-bedrock-1
+    app.kubernetes.io/name: minecraft-bedrock
 spec:
   selector:
-    app.kubernetes.io/name: minecraft-bedrock-1
+    app.kubernetes.io/name: minecraft-bedrock
   ports:
     - port: 19132
       protocol: UDP
