--- a/minecraft/base/storage.yaml
+++ b/minecraft/base/storage.yaml
@@ -2,31 +2,31 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: minecraft-bedrock-1
+  name: minecraft-bedrock
   labels:
-    app.kubernetes.io/name: minecraft
+    app.kubernetes.io/name: minecraft-bedrock
 spec:
   capacity:
     storage: 1Gi
   accessModes:
     - ReadWriteOnce
-  storageClassName: longhorn
+  storageClassName: longhorn-minecraft
   csi:
     driver: driver.longhorn.io
     fsType: ext4
-    volumeHandle: minecraft-bedrock-1
+    volumeHandle: minecraft-bedrock
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: minecraft-bedrock-1
+  name: minecraft-bedrock
   labels:
-    app.kubernetes.io/name: minecraft
+    app.kubernetes.io/name: minecraft-bedrock
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-  volumeName: minecraft-bedrock-1
+  volumeName: minecraft-bedrock
   storageClassName: longhorn
