--- a/minecraft/base/deployment.yaml
+++ b/minecraft/base/deployment.yaml
@@ -46,7 +46,8 @@ spec:
             - name: data
               mountPath: /data
             - name: allowlist
-              mountPath: /data/allowlist.json
+              mountPath: /data
+              subPath: allowlist.json
       volumes:
         - name: data
           persistentVolumeClaim:
