--- a/minecraft/base/config.yaml
+++ b/minecraft/base/config.yaml
@@ -7,8 +7,8 @@ metadata:
     app.kubernetes.io/name: minecraft-bedrock-config
 data:
   EULA: 'true'
-  UID: '1000'
-  GID: '1000'
+  #UID: '1000'
+  #GID: '1000'
   TZ: 'Europe/London'
   #VERSION: '1.20'
   PACKAGE_BACKUP_KEEP: '2'
