--- a/minecraft/base/config.yaml
+++ b/minecraft/base/config.yaml
@@ -26,5 +26,5 @@ data:
   LEVEL_NAME: 'My Test Server'
   #LEVEL_SEED: "33480944
   OPS: '2533274949710273'
-  ALLOWLIST: 'true'
-  ALLOWLIST_USERS: 'Deddy:2533274949710273,Luna:2533274949710000'
+  ALLOW_LIST: 'true'
+  ALLOW_LIST_USERS: 'Deddy:2533274949710273,Luna:2535463308445170'
