--- a/apps/templates/minecraft-mc1.yaml
+++ b/apps/templates/minecraft-mc1.yaml
@@ -11,7 +11,7 @@ spec:
     namespace: minecraft
     server: {{ .Values.spec.destination.server }}
   source:
-    path: minecraft/overlays/prod
+    path: server-bedrock/overlays/mc1
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
   syncPolicy:
