--- a/server-bedrock/base/deployment.yaml
+++ b/server-bedrock/base/deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: minecraft-bedrock
+  name: minecraft-bedrock-server
   labels:
-    app.kubernetes.io/name: minecraft-bedrock
+    app.kubernetes.io/name: minecraft-bedrock-server
 spec:
   replicas: 1
   revisionHistoryLimit: 2
@@ -11,14 +11,14 @@ spec:
     type: Recreate
   selector:
     matchLabels:
-      app.kubernetes.io/name: minecraft-bedrock
+      app.kubernetes.io/name: minecraft-bedrock-server
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: minecraft-bedrock
+        app.kubernetes.io/name: minecraft-bedrock-server
     spec:
       containers:
-        - name: minecraft-bedrock
+        - name: minecraft-bedrock-server
           image: docker.io/itzg/minecraft-bedrock-server
           imagePullPolicy: Always
           envFrom:
@@ -34,7 +34,7 @@ spec:
               cpu: 1
               memory: 1Gi
           readinessProbe: &probe
-            initialDelaySeconds: 30
+            initialDelaySeconds: 60
             exec:
               command:
                 - mc-monitor
@@ -50,4 +50,4 @@ spec:
       volumes:
         - name: data
           persistentVolumeClaim:
-            claimName: minecraft-bedrock
+            claimName: minecraft-bedrock-server
