--- a/server-bedrock/base/kustomization.yaml
+++ b/server-bedrock/base/kustomization.yaml
@@ -1,8 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-commonLabels:
-  app.kubernetes.io/instance: minecraft
-  app.kubernetes.io/part-of: minecraft
+labels:
+  - includeSelectors: true
+    pairs:
+      app.kubernetes.io/part-of: minecraft
 resources:
   - storage.yaml
   - config.yaml
