--- a/apps/templates/minecraft-mc1.yaml
+++ b/apps/templates/minecraft-mc1.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: minecraft-bedrock
+  name: minecraft-mc1
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
