--- a/server-bedrock/base/storage.yaml
+++ b/server-bedrock/base/storage.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: minecraft-bedrock
+  name: minecraft-bedrock-server
   labels:
     app.kubernetes.io/name: minecraft-bedrock-server
 spec:
