--- a/server-bedrock/base/service.yaml
+++ b/server-bedrock/base/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: minecraft-bedrock
+  name: minecraft-bedrock-server
   labels:
     app.kubernetes.io/name: minecraft-bedrock-server
 spec:
