--- a/server-bedrock/base/config.yaml
+++ b/server-bedrock/base/config.yaml
@@ -25,6 +25,6 @@ data:
   DIFFICULTY: 'easy'
   LEVEL_NAME: 'My World'
   #LEVEL_SEED: "33480944
-  #OPS: '2533274949710273' # Deddy
+  OPS: '2533274949710273' # Deddy
   ALLOW_LIST: 'true'
   ALLOW_LIST_USERS: 'Deddy:2533274949710273,Luna:2535463308445170'
