Another selector test

--- a/server-bedrock/overlays/mc1/kustomization.yaml
+++ b/server-bedrock/overlays/mc1/kustomization.yaml
@@ -46,6 +46,9 @@ patches:
       name: minecraft-bedrock-server
     patch: |
       - op: replace
+        path: /metadata/name
+        value: minecraft-bedrock-server-mc1
+      - op: replace
         path: /spec/selector/app.kubernetes.io~1name
         value: minecraft-bedrock-server-mc1
       - op: add
