--- a/server-bedrock/overlays/mc1/kustomization.yaml
+++ b/server-bedrock/overlays/mc1/kustomization.yaml
@@ -56,5 +56,5 @@ patches:
         value:
           kube-vip.io/loadbalancerIPs: 10.1.1.48
           tailscale.com/expose: true
-          tailscale.com/tags: minecraft
+          tailscale.com/tags: tag:minecraft
           tailscale.com/hostname: mc1
