--- a/server-bedrock/base/kustomization.yaml
+++ b/server-bedrock/base/kustomization.yaml
@@ -6,6 +6,20 @@ labels:
       app.kubernetes.io/part-of: minecraft
 resources:
   - storage.yaml
-  - config.yaml
+#  - config.yaml
   - deployment.yaml
   - service.yaml
+generatorOptions:
+  disableNameSuffixHash: false
+  labels:
+    app.kubernetes.io/name: minecraft-bedrock-server
+configMapGenerator:
+  - name: minecraft-bedrock-container-config
+    behavior: create
+    literals:
+      - EULA='true'
+      - TZ='Europe/London'
+      - VERSION='LATEST'
+      - EMIT_SERVER_TELEMETRY='false'
+      - ENABLE_LAN_VISIBILITY='true'
+      - PACKAGE_BACKUP_KEEP='2'
