--- a/server-bedrock/base/deployment.yaml
+++ b/server-bedrock/base/deployment.yaml
@@ -37,11 +37,10 @@ spec:
               name: bedrock-tcp
           resources:
             requests:
-              cpu: 2
+              cpu: 250m
               memory: 1Gi
             limits:
-              cpu: 4
-              memory: 2Gi
+              memory: 1Gi
           livenessProbe:
             initialDelaySeconds: 120
             exec:
