Addting proxyclass to services

--- a/server-bedrock/overlays/mc1/kustomization.yaml
+++ b/server-bedrock/overlays/mc1/kustomization.yaml
@@ -67,3 +67,7 @@ patches:
           tailscale.com/expose: true
           tailscale.com/tags: tag:minecraft
           tailscale.com/hostname: mc1
+      - op: add
+        path: /metadata/labels
+        value:
+          tailscale.com/proxy-class: tun-access
