--- a/server-bedrock/overlays/mc2/kustomization.yaml
+++ b/server-bedrock/overlays/mc2/kustomization.yaml
@@ -10,7 +10,7 @@ images:
 resources:
   - ../../base
 configMapGenerator:
-  - name: minecraft-bedrock-server-config
+  - name: minecraft-server-config
     behavior: create
     literals:
       - GAMEMODE='creative'
@@ -25,41 +25,59 @@ patches:
   - target:
       version: v1
       kind: PersistentVolumeClaim
-      name: minecraft-bedrock-server
+      name: minecraft-server
     patch: |
       - op: replace
         path: /metadata/name
-        value: minecraft-bedrock-server-mc2
+        value: minecraft-server-mc2
       - op: replace
         path: /spec/volumeName
-        value: minecraft-bedrock-server-mc2
+        value: minecraft-server-mc2
+
   - target:
       version: v1
       kind: PersistentVolume
-      name: minecraft-bedrock-server
+      name: minecraft-server
     patch: |
       - op: replace
         path: /metadata/name
-        value: minecraft-bedrock-server-mc2
+        value: minecraft-server-mc2
       - op: replace
         path: /spec/csi/volumeHandle
-        value: minecraft-bedrock-mc2
+        value: minecraft-mc2
+
   - target:
       version: v1
       kind: Deployment
-      name: minecraft-bedrock-server
+      name: minecraft-server
     patch: |
       - op: replace
         path: /metadata/name
-        value: minecraft-bedrock-server-mc2
+        value: minecraft-server-mc2
+
   - target:
       version: v1
       kind: Service
-      name: minecraft-bedrock-server
+      name: minecraft-server
     patch: |
       - op: replace
         path: /metadata/name
-        value: minecraft-bedrock-server-mc2
+        value: minecraft-server-mc2
+      - op: replace
+        path: /spec/ports/0/port
+        value: 19133
+      - op: replace
+        path: /spec/ports/1/port
+        value: 19133
+
+  - target:
+      version: v1
+      kind: Service
+      name: minecraft-server
+    patch: |
+      - op: replace
+        path: /metadata/name
+        value: minecraft-server-ts-mc2
       - op: add
         path: /metadata/annotations
         value:
@@ -70,9 +88,3 @@ patches:
         path: /metadata/labels
         value:
           tailscale.com/proxy-class: tun-access
-      - op: replace
-        path: /spec/ports/0/port
-        value: 19133
-      - op: replace
-        path: /spec/ports/1/port
-        value: 19133
