--- a/server-bedrock/overlays/mc1/kustomization.yaml
+++ b/server-bedrock/overlays/mc1/kustomization.yaml
@@ -44,7 +44,7 @@ patches:
         value: minecraft-server-mc1
       - op: replace
         path: /spec/csi/volumeHandle
-        value: minecraft-mc1
+        value: minecraft-server-mc1
 
   - target:
       version: v1
