--- a/common/loadbalancer-ipam.yaml
+++ b/common/loadbalancer-ipam.yaml
@@ -8,4 +8,4 @@ spec:
     - start: "10.1.1.52"
   serviceSelector:
     matchLabels:
-      "io.kubernetes.service.namespace": "minecraft"
+      io.kubernetes.service.namespace: minecraft
