--- a/server-bedrock/overlays/mc2/kustomization.yaml
+++ b/server-bedrock/overlays/mc2/kustomization.yaml
@@ -79,5 +79,5 @@ patches:
         path: /metadata/name
         value: minecraft-server-ts-mc2
       - op: add
-        path: /metadata/annotations/tailscale.com/hostname
+        path: "/metadata/annotations/tailscale.com/hostname"
         value: mc2
