--- a/server-bedrock/overlays/mc1/kustomization.yaml
+++ b/server-bedrock/overlays/mc1/kustomization.yaml
@@ -79,5 +79,5 @@ patches:
         path: /metadata/name
         value: minecraft-server-ts-mc1
       - op: add
-        path: /metadata/annotations/tailscale.com~hostname
+        path: /metadata/annotations/tailscale.com~1hostname
         value: mc1
