--- a/server-bedrock/overlays/mc2/kustomization.yaml
+++ b/server-bedrock/overlays/mc2/kustomization.yaml
@@ -17,7 +17,7 @@ configMapGenerator:
       - LEVEL_TYPE='default'
       - DIFFICULTY='easy'
       - LEVEL_NAME='My World'
-      - LEVEL_SEED='7794572526148668328'
+      #- LEVEL_SEED='7794572526148668328'
       - OPS='2533274949710273'
       - ALLOW_LIST='true'
       - ALLOW_LIST_USERS='Deddy:2533274949710273,Luna:2535463308445170'
