Trying without TCP port

--- a/server-bedrock/base/service.yaml
+++ b/server-bedrock/base/service.yaml
@@ -16,10 +16,10 @@ spec:
       protocol: UDP
       port: 19132
       targetPort: bedrock-udp
-    - name: bedrock-tcp
-      protocol: TCP
-      port: 19132
-      targetPort: bedrock-tcp
+#    - name: bedrock-tcp
+#      protocol: TCP
+#      port: 19132
+#      targetPort: bedrock-tcp
   type: LoadBalancer
   loadBalancerClass: io.cilium/l2-announcer
 ---
@@ -41,9 +41,9 @@ spec:
       protocol: UDP
       port: 19132
       targetPort: bedrock-udp
-    - name: bedrock-tcp
-      protocol: TCP
-      port: 19132
-      targetPort: bedrock-tcp
+#    - name: bedrock-tcp
+#      protocol: TCP
+#      port: 19132
+#      targetPort: bedrock-tcp
   type: LoadBalancer
   loadBalancerClass: tailscale
