--- a/server-bedrock/overlays/mc2/kustomization.yaml
+++ b/server-bedrock/overlays/mc2/kustomization.yaml
@@ -69,9 +69,9 @@ patches:
       - op: replace
         path: /spec/ports/0/port
         value: 19133
-      - op: replace
-        path: /spec/ports/1/port
-        value: 19133
+#      - op: replace
+#        path: /spec/ports/1/port
+#        value: 19133
 
   - target:
       version: v1
