--- a/server-bedrock/overlays/mc3/kustomization.yaml
+++ b/server-bedrock/overlays/mc3/kustomization.yaml
@@ -68,6 +68,9 @@ patches:
       - op: replace
         path: /spec/ports/0/port
         value: 19134
+      - op: replace
+        path: /spec/ports/1/port
+        value: 19134
 
   - target:
       version: v1
