--- a/server-bedrock/base/service.yaml
+++ b/server-bedrock/base/service.yaml
@@ -12,7 +12,7 @@ spec:
     app.kubernetes.io/name: minecraft-server
   ports:
     - name: bedrock-tcp
-      protocol: UDP
+      protocol: TCP
       port: 19132
       targetPort: bedrock-tcp
     - name: bedrock-udp
@@ -37,7 +37,7 @@ spec:
     app.kubernetes.io/name: minecraft-server
   ports:
     - name: bedrock-tcp
-      protocol: UDP
+      protocol: TCP
       port: 19132
       targetPort: bedrock-tcp
     - name: bedrock-udp
