--- a/server-bedrock/base/deployment.yaml
+++ b/server-bedrock/base/deployment.yaml
@@ -34,6 +34,8 @@ spec:
               value: 'true'
             - name: PACKAGE_BACKUP_KEEP
               value: '2'
+            - name: VIEW_DISTANCE
+              value: '32'
           envFrom:
             - configMapRef:
                 name: minecraft-server-config
@@ -63,6 +65,9 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /data
+          hostNetwork: true
+          extraPodSpec:
+            hostNetwork: "{{ .Values.hostNetwork }}"
       volumes:
         - name: data
           persistentVolumeClaim:
