--- a/server-bedrock/overlays/mc3/kustomization.yaml
+++ b/server-bedrock/overlays/mc3/kustomization.yaml
@@ -14,6 +14,8 @@ configMapGenerator:
     behavior: create
     literals:
       - SERVER_NAME='Survival!'
+      - SERVER_PORT='19134'
+      - SERVER_PORT_V6='19134'
       - GAMEMODE='survival'
       - LEVEL_TYPE='default'
       - DIFFICULTY='easy'
